// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check-field can mount "read only" Check field 1`] = `
<div id="app">
	<div class="SharpCheck form-check">
		<input type="checkbox" disabled="disabled" class="form-check-input">
		<label class="form-check-label">

		</label>
	</div>
</div>
`;

exports[`check-field can mount Check field 1`] = `
<div id="app">
	<div class="SharpCheck form-check">
		<input type="checkbox" class="form-check-input">
		<label class="form-check-label">

		</label>
	</div>
</div>
`;
